--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,5 @@ production_url : http://toxic-lab.github.io
 ads:
     google: false
 permalink: short-urls-jekyll 
+url: http://toxic-lab.github.io
+baseurl: /DroidG2
